--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="container">
       <!-- Left Box -->
       <div class="left-box">
-        <img src="/ZTM.png" alt="AlexCodes Logo" class="img-container" />
+        <img src="./ZTM.png" alt="AlexCodes Logo" class="img-container" />
       </div>
       <!-- Main Bar container -->
       <div class="main-bar-container">
